# SwiftGIT

./: Cargo.toml  README.md  SETUP.md  install.sh
src/: auth.rs  github.rs  lib.rs  main.rs
src/config/: mod.rs
src/git/: mod.rs
src/gui/: mod.rs  model.rs
src/gui/context/: auth.rs  clone_input.rs  dashboard.rs  deinit_confirm.rs  editor.rs  folder_input.rs  help.rs  loading.rs  mod.rs  push_dialog.rs  rebase.rs  recent_projects.rs  remote_picker.rs  repo.rs  search.rs  settings.rs  ssh_setup.rs
src/gui/controllers/: mod.rs
src/gui/helpers/: diff.rs  mod.rs  refresh.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: auth.rs  dashboard.rs  editor.rs  ghgrab.rs  help_dialog.rs  mod.rs  push_dialog.rs  remote_picker.rs  repo_view.rs  searching.rs  settings_dialog.rs  ssh_setup.rs
tools/: theme_picker.html
