[package]
name = "swiftgit"
version = "1.3.0"
edition = "2021"
authors = ["swiftgit"]
description = "A minimal Git client with GitHub integration — in your terminal"
license = "MIT"

[[bin]]
name = "swiftgit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.25"
crossterm = "0.27"
url = "2.5"
anyhow = "1.0"
dirs = "6.0.0"
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
rusty-hook = "0.11.2"